--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,9 @@
 html
   head
     title= title
-    link(rel='stylesheet' href='/style.css')
+    meta(charset='UTF-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet' href='/styles/main.css')
     link(rel='preconnect' href='https://fonts.gstatic.com')
     link(href='https://fonts.googleapis.com/css2?family=Merriweather:wght@300;900&display=swap' rel='stylesheet')
 
@@ -9,4 +11,3 @@ html
     include includes/navbar
     
     block content
-    script(src='https://cdn.jsdelivr.net/npm/marked/marked.min.js')
